# docling-gui

./: .gitignore  Dockerfile  Docling GUI.spec  build-windows.sh  docling-gui.py  export_to_markdown.py  pyproject.toml
.github/workflows/: build.yml
