[project]
name = "poc-docling"
version = "0.1.0"
description = ""
authors = [
    { name = "Gabriel Maia", email = "gabrielmaialva33@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
docling = "^2.28.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
