[project]
name = "docling-gui"
version = "0.1.0"
description = ""
authors = [
    { name = "Gabriel Maia", email = "gabrielmaialva33@gmail.com" },
    { name = "Josi Sativa", email = "iamreoli@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
packages = [
    { include = "docling_gui", from = "." }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
docling = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[tool.poetry.group.mac_intel.dependencies]
torch = [
    { markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^2.2.2" },
    { markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "~2.2.2" },
]
torchvision = [
    { markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^0" },
    { markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "~0.17.2" },
]